# Clia

./: Cargo.toml  README.md  shell.nix  toolchain.toml
crates/ast/: Cargo.toml
crates/ast/src/: lib.rs
crates/clia-cli/: Cargo.toml
crates/clia-cli/src/: main.rs
crates/hir/: Cargo.toml
crates/hir/src/: lib.rs
crates/janet-backend/: Cargo.toml
crates/janet-backend/src/: lib.rs
crates/syntax/: Cargo.toml  clia.ungram
crates/syntax/src/: lib.rs  parser.rs  syntax_kind.rs  tests.rs
crates/tree-sitter-clia/: .gitignore  Cargo.toml  README.md  grammar.js  log.html  package-lock.json  package.json
crates/tree-sitter-clia/bindings/node/: binding.cc  index.js
crates/tree-sitter-clia/bindings/rust/: lib.rs
crates/tree-sitter-clia/src/: grammar.json  node-types.json  parser.c
crates/tree-sitter-clia/test/: testing_parser.clia
crates/tree-sitter-clia/test/corpus/: comment.txt  modules.txt
internal_doc/: compiler_arch.md  design_principles.md  example.md  readme.md  references.md  user_persona.md  vocabulary.md
tree-sitter-clia/: .gitignore  grammar.js  package.json
tree-sitter-clia/test/corpus/: binary_op.txt  integer.txt  literals.txt
