[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
name = "clia"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
tree-sitter-clia = { path = "./crates/tree-sitter-clia", version = "0.0.0" }
syntax = { path = "./crates/syntax", version = "0.0.0"}
ast = { path = "./crates/ast", version = "0.0.0"}
hir = { path = "./crates/hir", version = "0.0.0"}
janet-backend = { path = "./crates/janet-backend", version = "0.0.0"}
