[package]
name = "clia-cli"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
ast = { workspace = true }
hir = { workspace = true }
syntax = { workspace = true }
janet-backend = { workspace = true }
