[package]
name = "janet-backend"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TODO use a stable version again. This is here to handle the janet update
janetrs = { version = "0.7.0", features = [
  "std",
  "unicode",
  "amalgation",
] }
ast = { workspace = true }
hir = { workspace = true }
syntax = { workspace = true }
