[package]
name = "syntax"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter = "~0.20.10"
tree-sitter-traversal = "0.1.2"
ungrammar = "1.16.1"

tree-sitter-clia = { workspace = true }

[dev-dependencies]

