[package]
name = "syntax"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter = "~0.22.2"
tree-sitter-traversal = "0.1.2"
rowan = "0.15.11"

tree-sitter-clia = { workspace = true }

[dev-dependencies]

quote = "1.0.29"
expect-test = "1.4.1"